--- a/public/offline.html
+++ b/public/offline.html
@@ -37,7 +37,7 @@
     <body>
         <div class="city">
             <h2 class="city-name">
-                <span>Please go online to check the current weather.</span>
+                <span>Por favor, conecte-se a internet para ver o tempo</span>
             </h2>
         </div>
     </body>
